--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
     <body>
 
-        
+        <div class="wrap">
+            <div id="slides">
+                <!-- load in slides -->
+            </div>
+        </div>
+
+        <script src="//code.jquery.com/jquery-2.2.2.min.js"></script>
 
     </body>
 
