--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </div>
         </div>
 
-        <script src="//code.jquery.com/jquery-2.2.2.min.js"></script>
+        <script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
+        <script src="js/scripts.js"></script>
 
     </body>
 
