--- a/slides/0.html
+++ b/slides/0.html
@@ -1,16 +1,20 @@
 <div id="zero">
 
-    <h1>Slide 0</h1>
-    <ul>
-        <li>
-            Item One
-        </li>
-        <li>
-            Item Two
-        </li>
-        <li>
-            Item Three
-        </li>
-    </ul>
+    <div>
+
+        <h1>Slide 0</h1>
+        <ul>
+            <li>
+                Item One
+            </li>
+            <li>
+                Item Two
+            </li>
+            <li>
+                Item Three
+            </li>
+        </ul>
+
+    </div>
 
 </div>
