--- a/slides/0.html
+++ b/slides/0.html
@@ -1,19 +1,9 @@
-<div id="zero">
+<div class="container" id="zero">
 
     <div>
 
-        <h1>Slide 0</h1>
-        <ul>
-            <li>
-                Item One
-            </li>
-            <li>
-                Item Two
-            </li>
-            <li>
-                Item Three
-            </li>
-        </ul>
+        <h1>Refactoring with Sass</h1>
+        <h2>Alex MacDuff, UI Designer</h2>
 
     </div>
 
