--- a/slides/1.html
+++ b/slides/1.html
@@ -1,5 +1,10 @@
-<div>
+<div class="container" id="one">
 
-    <h1>Slide 1</h1>
+    <div>
+
+        <h1>What is Sass?</h1>
+        <p>CSS with superpowers</p>
+
+    </div>
 
 </div>
