--- a/slides/2.html
+++ b/slides/2.html
@@ -1,5 +1,9 @@
-<div>
+<div class="container" id="two">
 
-    <h1>Slide 2</h1>
+    <div>
+
+        <h1>Why Refactor?</h1>
+
+    </div>
 
 </div>
