--- a/slides/3.html
+++ b/slides/3.html
@@ -1,5 +1,22 @@
-<div>
+<div class="container" id="three">
 
-    <h1>Slide 3</h1>
+    <div>
+
+        <ul>
+            <li>
+                no one writes code perfectly the first time
+            </li>
+            <li>
+                CSS is hard to maintain
+            </li>
+            <li>
+                things change
+            </li>
+            <li>
+                duplication or bloat
+            </li>
+        </ul>
+
+    </div>
 
 </div>
