--- a/slides/4.html
+++ b/slides/4.html
@@ -1,5 +1,10 @@
-<div>
+<div class="container" id="four">
 
-    <h1>Slide 4</h1>
+    <div>
+
+        <h1>Refactoring</h1>
+        <p>changes the structure of existing code without changing its behavior</p>
+
+    </div>
 
 </div>
