Add margin to top of h2

--- a/slides/0.html
+++ b/slides/0.html
@@ -2,7 +2,7 @@
 
     <div>
 
-        <h1>Refactoring with Sass</h1>
+        <h1>Refactoring<br>with Sass</h1>
         <h2>Alex MacDuff, UI Designer</h2>
 
     </div>
