Adjust pre tabbing

--- a/slides/18.html
+++ b/slides/18.html
@@ -2,7 +2,7 @@
 
     <div>
 
-        <h1>Break up existing files<br>& import them</h1>
+        <h1>Break up existing files & import them</h1>
 
     </div>
 
