--- a/slides/20.html
+++ b/slides/20.html
@@ -2,7 +2,7 @@
 
     <div>
 
-        <h1>Import without altering<br>existing output order</h1>
+        <h1>Import without altering existing output order</h1>
 
     </div>
 
