--- a/slides/7.html
+++ b/slides/7.html
@@ -3,7 +3,7 @@
     <div>
 
         <h1>Installing Sass</h1>
-        <h2>I have to use the command line?!</h2>
+        <p>I have to use the command line?!</p>
 
     </div>
 
