Adjust pre styles

--- a/slides/3.html
+++ b/slides/3.html
@@ -4,7 +4,7 @@
 
         <ul>
             <li>
-                no one writes code perfectly the first time
+                no one writes code perfectly<br>the first time
             </li>
             <li>
                 CSS is hard to maintain
