Add manual line break

--- a/slides/14.html
+++ b/slides/14.html
@@ -2,7 +2,7 @@
 
     <div>
 
-        <h1>Steps to switch to .scss</h1>
+        <h1>Steps to switch<br>to .scss</h1>
         <ol>
             <li>
                 change all your .css files to .scss
