--- a/slides/21.html
+++ b/slides/21.html
@@ -2,8 +2,27 @@
 
     <div>
 
-        <h1>Thanks for listening</h1>
-        <h2>@amacduff</h2>
+        <h2>Refactoring Steps</h2>
+        <ol>
+            <li>
+                Break into Partials
+            </li>
+            <li>
+                Use Comments to provide explanation
+            </li>
+            <li>
+                Add Nesting
+            </li>
+            <li>
+                Implement Variables
+            </li>
+            <li>
+                Create Mixins
+            </li>
+            <li>
+                Use Extends
+            </li>
+        </ol>
 
     </div>
 
