Edit wording, make ul, ol lowercase

--- a/slides/21.html
+++ b/slides/21.html
@@ -8,7 +8,7 @@
                 Break into Partials
             </li>
             <li>
-                Use Comments to provide explanation
+                Write Comments
             </li>
             <li>
                 Add Nesting
