--- a/slides/15.html
+++ b/slides/15.html
@@ -2,7 +2,27 @@
 
     <div>
 
-        <h1>Importing</h1>
+        <h2>Refactoring Steps</h2>
+        <ol>
+            <li>
+                Break into Partials
+            </li>
+            <li>
+                Write Comments
+            </li>
+            <li>
+                Add Nesting
+            </li>
+            <li>
+                Implement Variables
+            </li>
+            <li>
+                Create Mixins
+            </li>
+            <li>
+                Use Extends
+            </li>
+        </ol>
 
     </div>
 
