--- a/slides/16.html
+++ b/slides/16.html
@@ -2,10 +2,7 @@
 
     <div>
 
-        <h1>Create a manifest file</h1>
-        <pre>
-application.scss
-        </pre>
+        <h1>Importing</h1>
 
     </div>
 
