--- a/slides/17.html
+++ b/slides/17.html
@@ -2,14 +2,9 @@
 
     <div>
 
+        <h1>Create a manifest file</h1>
         <pre>
-@import "variables",
-	"mixins",
-	"global",
-	"headings",
-	"header",
-	"footer",
-	"media_queries";
+application.scss
         </pre>
 
     </div>
