--- a/slides/18.html
+++ b/slides/18.html
@@ -2,7 +2,15 @@
 
     <div>
 
-        <h1>Break up existing files & import them</h1>
+        <pre>
+@import "variables",
+	"mixins",
+	"global",
+	"headings",
+	"header",
+	"footer",
+	"media_queries";
+        </pre>
 
     </div>
 
