--- a/slides/19.html
+++ b/slides/19.html
@@ -2,10 +2,7 @@
 
     <div>
 
-        <pre>
-variables.scss -> variables.css
-_variables.scss
-        </pre>
+        <h1>Break up existing files & import them</h1>
 
     </div>
 
