--- a/slides/20.html
+++ b/slides/20.html
@@ -2,7 +2,10 @@
 
     <div>
 
-        <h1>Import without altering existing output order</h1>
+        <h1>Naming Partials</h1>
+        <pre>
+_variables.scss
+        </pre>
 
     </div>
 
