--- a/slides/21.html
+++ b/slides/21.html
@@ -2,27 +2,7 @@
 
     <div>
 
-        <h2>Refactoring Steps</h2>
-        <ol>
-            <li>
-                Break into Partials
-            </li>
-            <li>
-                Write Comments
-            </li>
-            <li>
-                Add Nesting
-            </li>
-            <li>
-                Implement Variables
-            </li>
-            <li>
-                Create Mixins
-            </li>
-            <li>
-                Use Extends
-            </li>
-        </ol>
+        <h1>Import without altering existing output order</h1>
 
     </div>
 
